flexbox_styles.css
/* 
TODO: Add styles to match the layout in the image.
Note: you should only need to use flexbox properties and margin/padding to create the layout.
*/

header {
  width: 100%;
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}
.nav-link {
  justify-content: space-between;
  margin: 0 15px;
}

.user-actions {
  display: flex;
  gap: 15px;
}

.card-container {
  display: flex;
  gap: 25px;
  margin-bottom: 5px;
}
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
/* need help with the img being centered */
.card img {
  display: block;
  padding-left: 0;
}
.features {
  display: flex;
  justify-content: space-evenly;
  text-align: center;
  padding: 40px 20px;
  gap: 40px;
}
.feature-item {
  flex-wrap: wrap;
  align-items: center;
}

.footer-content {
  display: flex;
  text-align: left;
  flex: 1 1 0;
  gap: 20px;
}

.social-links {
  display: flex;
  gap: 15px;
}
.footer-section {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: 1;
  gap: 5px;
  padding-bottom: 30px;
}

/* 
Challenge: Use flexbox in media queries to create a responsive layout 
*/

